--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-06  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-search-engine-beagle.c:
+	(nautilus_search_engine_beagle_set_query):
+	Unref the right query.
+
 2005-12-05  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-utilities.c:
