Add new fields to NautilusQuery
2005-12-06  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-query.[ch]:
        Add new fields to NautilusQuery

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-06  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-query.[ch]:
+	Add new fields to NautilusQuery
+
+2005-12-06  Alexander Larsson  <alexl@redhat.com>
+
 	Merge in changes from NAUTILUS_2_12_1 to
 	NAUTILUS_SEARCH2_MERGE_ANCHOR1 (on HEAD).
 	(This is NAUTILUS_SEARCH2_MERGE_POINT1)
