--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-06  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2005-12-06  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation by Vital Khilko.
