--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-07  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-query-editor.c (setup_external_entry):
+	Make ugly string slightly better.
+
+2005-12-07  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Mime API needs gnome-vfs-module. Unfortunate...
 	
