Use the new combo box code (#322487)
2005-12-08  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-file-management-properties.c:
	* src/nautilus-file-management-properties.glade:
	Use the new combo box code (#322487)

	Patch from jaap@haitsma.org

	* configure.in:
	Require new eel.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2005-12-08  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-file-management-properties.c:
+	* src/nautilus-file-management-properties.glade:
+	Use the new combo box code (#322487)
+	
+	Patch from jaap@haitsma.org
+	
+	* configure.in:
+	Require new eel.
+
 2005-12-01  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes bug #318140:
