Use combo box instead of option menu (#322567)
2005-12-09  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window.[ch]:
	Use combo box instead of option menu (#322567)

	Patch from jaap@haitsma.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-09  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-navigation-window.[ch]:
+	Use combo box instead of option menu (#322567)
+
+	Patch from jaap@haitsma.org
+	
 2005-12-08  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-file-management-properties.c:
