Use GtkComboBox, not option menu. (#322567)
2005-12-12  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	Use GtkComboBox, not option menu. (#322567)

	Patch by Jaap A. Haitsma

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-12  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
+	Use GtkComboBox, not option menu. (#322567)
+
+	Patch by Jaap A. Haitsma
+
 2005-12-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
