Make it possible to build without beagle.
2005-12-12  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
        Make it possible to build without beagle.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-12  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Make it possible to build without beagle.
+
+2005-12-12  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/Makefile.am:
 	* libnautilus-private/nautilus-search-engine-simple.[ch]:
 	Add new NautilusSearchEngineSimple backend.
