Another case where we need to create a saved search file.
2005-12-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c (nautilus_file_new_from_relative_uri):
        Another case where we need to create a saved search file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-12  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (nautilus_file_new_from_relative_uri):
+	Another case where we need to create a saved search file.
+
+2005-12-12  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Make it possible to build without beagle.
 
