Update for release
2005-12-12  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2005-12-06  Alexander Larsson  <alexl@redhat.com>
+2005-12-12  Alexander Larsson  <alexl@redhat.com>
+	
+	* NEWS:
+	Update for release
+
+--- Merged the nautilus-search2 branch ---
+	
+2005-12-12  Alexander Larsson  <alexl@redhat.com>
 
 	Merge in changes from NAUTILUS_SEARCH2_MERGE_ANCHOR1 to
 	NAUTILUS_SEARCH2_MERGE_ANCHOR2 (on HEAD).
@@ -234,8 +241,7 @@
 	Update to new APIs (base class and model).
 	Fix leak in fm_list_view_get_selection_foreach_func.
 	
-
---- nautilus-search2 branch ---
+--- end of nautilus-search2 merge ---
     
 2005-12-12  Alexander Larsson  <alexl@redhat.com>
 
