--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.13.3 are:
+* Added initial support for search
+* Fixed memleaks
+* Don't frame thumbnails with alpha channel
+* Better handling of opening multiple files
+* New resize knob icon
+* View update optimizations
+* No titles for alert dialogs
+* Add network desktop icon
+* Use access() to determine permissions
+
 Major changes in 2.13.2 are:
 * Fix mime list problem introduced with sort change
 * Build fixes
