disable update-mimedb in distcheck
2005-12-12  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	disable update-mimedb in distcheck

	* libnautilus-private/Makefile.am:
	Add beagle sources to extradist

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-12-12  Alexander Larsson  <alexl@redhat.com>
-	
+
+	* Makefile.am:
+	disable update-mimedb in distcheck
+
+	* libnautilus-private/Makefile.am:
+	Add beagle sources to extradist
+
 	* NEWS:
 	Update for release
 
