--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-12-12  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.13.3 ===
+
+2005-12-12  Alexander Larsson  <alexl@redhat.com>
+
 	* Makefile.am:
 	disable update-mimedb in distcheck
 
