Updated Thai translation.
2005-12-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 === nautilus 2.13.3 ===
 
 2005-12-12  Alexander Shopov  <ash@contact.bg>
