open modules G_MODULE_BIND_LOCAL
2005-12-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-module.c (nautilus_module_load):
	open modules G_MODULE_BIND_LOCAL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-13  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-module.c (nautilus_module_load):
+	open modules G_MODULE_BIND_LOCAL
+
 2005-12-12  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
