Updated Slovak translation.
2005-12-14  Marcel Telka  <marcel@telka.sk>

	* sk.po: Updated Slovak translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-14  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Updated Slovak translation.
+
 2005-12-14  Ankit Patel  <ankit644@yahoo.com>
 
         * gu.po: Updated Gujarati Translation.
