Make entry 30 chars to match file selector dialog. Patch from Ray Strode
2005-12-15  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-location-dialog.c: (nautilus_location_dialog_init):
	Make entry 30 chars to match file selector dialog.
	Patch from Ray Strode

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-15  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-location-dialog.c: (nautilus_location_dialog_init):
+	Make entry 30 chars to match file selector dialog.
+	Patch from Ray Strode
+
 2005-12-13  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-module.c (nautilus_module_load):
