--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2005-12-15  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	* libnautilus-private/nautilus-global-preferences.h:
+	Rename network icon prefs to match others.
+
+2005-12-15  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
 	* libnautilus-private/nautilus-global-preferences.c:
 	Disable network icon on desktop by default.
 	
