--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-15  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2005-12-14  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
