--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-16  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2005-12-15  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
