--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-16  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (reveal_newly_added_folder):
+	Correct arguments for add_file, makes rename on new folder/file work
+	again.
+
 2005-12-15  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
