Use GTK_STOCK_REVERT_TO_SAVED item for icon selection dialog. Closes
2005-12-16  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-properties-window.c:
	(select_image_button_callback):
	Use GTK_STOCK_REVERT_TO_SAVED item for icon
	selection dialog. Closes #95115.
	Patch from Vidar Braut Haarr (vhaarr@gmail.com)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-12-16  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-properties-window.c:
+	(select_image_button_callback):
+	Use GTK_STOCK_REVERT_TO_SAVED item for icon
+	selection dialog. Closes #95115.
+	Patch from Vidar Braut Haarr (vhaarr@gmail.com)
+
 2005-12-16  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-extension/nautilus-column.c:
