HIG fixes. Use title capitalization for window titles. Fix widget spacing.
2005-12-16  Dennis Cranston  <dennis_cranston@yahoo.com>

 	* src/nautilus-property-browser.c: (nautilus_emblem_dialog_new),
 	(add_new_pattern), (add_new_color): HIG fixes.  Use title
 	capitalization for window titles.  Fix widget spacing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-16  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+ 	* src/nautilus-property-browser.c: (nautilus_emblem_dialog_new),
+ 	(add_new_pattern), (add_new_color): HIG fixes.  Use title 
+ 	capitalization for window titles.  Fix widget spacing.
+
 2005-12-16  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file.c: (get_time),
