HIG fix. Use title capitalization for menu items.
2005-12-16  Dennis Cranston  <dennis_cranston@yahoo.com>

 	* libnautilus-private/nautilus-dnd.c:
 	(nautilus_drag_drop_action_ask): HIG fix.  Use title capitalization
 	for menu items.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 2005-12-16  Dennis Cranston  <dennis_cranston@yahoo.com>
+ 
+ 	* libnautilus-private/nautilus-dnd.c:
+ 	(nautilus_drag_drop_action_ask): HIG fix.  Use title capitalization 
+ 	for menu items.  
+ 
+2005-12-16  Dennis Cranston  <dennis_cranston@yahoo.com>
 
  	* src/nautilus-property-browser.c: (nautilus_emblem_dialog_new),
  	(add_new_pattern), (add_new_color): HIG fixes.  Use title 
