HIG fixes for the save search dialog.
2005-12-18  Dennis Cranston <dennis_cranston@yahoo.com>

	* src/file-manager/fm-directory-view.c
	(action_save_search_as_callback):  HIG fixes for the save
	search dialog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-18  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* src/file-manager/fm-directory-view.c 
+	(action_save_search_as_callback):  HIG fixes for the save 
+	search dialog.
+	
 2005-12-18  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-desktop-link-monitor.c:
