--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-19  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Add missing files.
+
 2005-12-19  Ankit Patel  <ankit644@yahoo.com>
 
         * gu.po: Updated Gujarati Translation.
