--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-20  Ankit Patel  <ankit644@yahoo.com>
+
+        * gu.po: Updated Gujarati Translation.
+
 2005-12-19  Alexander Larsson  <alexl@redhat.com>
 
 	* POTFILES.in:
