Some better strings, not resizeable.
2005-12-20  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c:
	(action_save_search_as_callback):
	Some better strings, not resizeable.

	* src/nautilus-navigation-window.c:
	(nautilus_navigation_window_instance_init),
	(nautilus_navigation_window_destroy):
	Remove unused tooltips object

	* src/nautilus-query-editor.c:
	Add tooltips, fix spacing

	* src/nautilus-spatial-window.c:
	* src/nautilus-window-manage-views.c:
	Fix spacing for extra location widgets

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2005-12-20  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(action_save_search_as_callback):
+	Some better strings, not resizeable.
+
+	* src/nautilus-navigation-window.c:
+	(nautilus_navigation_window_instance_init),
+	(nautilus_navigation_window_destroy):
+	Remove unused tooltips object
+	
+	* src/nautilus-query-editor.c:
+	Add tooltips, fix spacing
+	
+	* src/nautilus-spatial-window.c:
+	* src/nautilus-window-manage-views.c:
+	Fix spacing for extra location widgets
+
 2005-12-18  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* src/file-manager/fm-directory-view.c 
