Updated Lithuanian translation.
2005-12-20  Žygimantas Beručka  <zygis@gnome.org>

        * lt.po: Updated Lithuanian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-20  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+	
 2005-12-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
